# FMI_Project

./: Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  Position.cpp  Position.h  Tribe.h  Unit.cpp  Unit.h  main.cpp
